data/derived/comb/progs/unify/prog4292.ml.out
Characters 84-104:
  d::t-> ((d*10)::t,bigAdd((mulByDigit (d*x) t) c))
                           ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list
       This is not a function; it cannot be applied.
